@@ -43,6 +43,7 @@ Codec::Codec(Codec::Type type,unsigned bitrate,QObject *parent)
   codec_pcm_out=NULL;
   codec_pcm_buffer[0]=NULL;
   codec_pcm_buffer[1]=NULL;
+  codec_frames_generated=0;
 }
 
 
